--- a/res/layout/outlet_wise_sale_report.xml
+++ b/res/layout/outlet_wise_sale_report.xml
@@ -23,11 +23,11 @@
                 <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="From" android:layout_weight="1"/>
+                        android:text="From" android:layout_weight="1" android:textSize="20dp"/>
                 <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="To" android:layout_weight="1"/>
+                        android:text="To" android:layout_weight="1" android:textSize="20dp"/>
             </LinearLayout>
             <LinearLayout
                     android:orientation="horizontal"
@@ -37,12 +37,12 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:inputType="date"
-                        android:id="@+id/inputFromDate" android:layout_weight="1" android:layout_gravity="center_vertical"/>
+                        android:id="@+id/inputFromDate" android:layout_weight="1" android:layout_gravity="center_vertical" android:textSize="20dp"/>
                 <EditText
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:inputType="date"
-                        android:id="@+id/inputToDate" android:layout_weight="1" android:layout_gravity="center_vertical"/>
+                        android:id="@+id/inputToDate" android:layout_weight="1" android:layout_gravity="center_vertical" android:textSize="20dp"/>
             </LinearLayout>
         </LinearLayout>
         <Button
