--- a/res/layout/attendance_history_page.xml
+++ b/res/layout/attendance_history_page.xml
@@ -4,49 +4,49 @@
               xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent" android:weightSum="1" android:padding="5dp">
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                  android:orientation="horizontal"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content" android:weightSum="10">
-        <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent" android:weightSum="2" android:layout_weight="8">
-            <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="fill_parent"
-                    android:layout_height="0dp" android:baselineAligned="false" android:layout_weight="1" android:weightSum="2">
-                <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:text="From" android:layout_weight="1"/>
-                <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:text="To" android:layout_weight="1"/>
-            </LinearLayout>
-            <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="fill_parent"
-                    android:layout_height="0dp" android:layout_weight="1" android:weightSum="2">
-                <EditText
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:inputType="date"
-                        android:id="@+id/inputFromDate" android:layout_weight="1" android:layout_gravity="center_vertical"/>
-                <EditText
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:inputType="date"
-                        android:id="@+id/inputToDate" android:layout_weight="1" android:layout_gravity="center_vertical"/>
-            </LinearLayout>
-        </LinearLayout>
-        <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:text="Search"
-                android:id="@+id/btnSearch" android:layout_weight="2"/>
-    </LinearLayout>
+    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--android:orientation="horizontal"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content" android:weightSum="10">-->
+    <!--<LinearLayout-->
+    <!--android:orientation="vertical"-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_height="fill_parent" android:weightSum="2" android:layout_weight="8">-->
+    <!--<LinearLayout-->
+    <!--android:orientation="horizontal"-->
+    <!--android:layout_width="fill_parent"-->
+    <!--android:layout_height="0dp" android:baselineAligned="false" android:layout_weight="1" android:weightSum="2">-->
+    <!--<TextView-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="From" android:layout_weight="1" android:textSize="20dp"/>-->
+    <!--<TextView-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="To" android:layout_weight="1" android:textSize="20dp"/>-->
+    <!--</LinearLayout>-->
+    <!--<LinearLayout-->
+    <!--android:orientation="horizontal"-->
+    <!--android:layout_width="fill_parent"-->
+    <!--android:layout_height="0dp" android:layout_weight="1" android:weightSum="2">-->
+    <!--<EditText-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:inputType="date"-->
+    <!--android:id="@+id/inputFromDate" android:layout_weight="1" android:layout_gravity="center_vertical" android:textSize="20dp"/>-->
+    <!--<EditText-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:inputType="date"-->
+    <!--android:id="@+id/inputToDate" android:layout_weight="1" android:layout_gravity="center_vertical" android:textSize="20dp"/>-->
+    <!--</LinearLayout>-->
+    <!--</LinearLayout>-->
+    <!--<Button-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:text="Search"-->
+    <!--android:id="@+id/btnSearch" android:layout_weight="2"/>-->
+    <!--</LinearLayout>-->
     <LinearLayout
             android:orientation="horizontal"
             android:weightSum="3"
