--- a/res/layout/cheque_realization_report.xml
+++ b/res/layout/cheque_realization_report.xml
@@ -58,7 +58,7 @@
         <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="invoice No" android:layout_weight="1" android:gravity="center_horizontal" android:textSize="15dp"/>
+                android:text="Invoice No" android:layout_weight="1" android:gravity="center_horizontal" android:textSize="15dp"/>
         <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
