--- a/res/layout/outlet_wise_sale_report.xml
+++ b/res/layout/outlet_wise_sale_report.xml
@@ -19,7 +19,7 @@
             <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="fill_parent"
-                    android:layout_height="0dp" android:baselineAligned="false" android:layout_weight="1" android:weightSum="2">
+                    android:layout_height="0dp" android:baselineAligned="false" android:layout_weight="1" android:weightSum="3">
                 <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -28,11 +28,15 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text="To" android:layout_weight="1" android:textSize="20dp"/>
+                <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="Category" android:layout_weight="1" android:textSize="20dp"/>
             </LinearLayout>
             <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="fill_parent"
-                    android:layout_height="0dp" android:layout_weight="1" android:weightSum="2">
+                    android:layout_height="0dp" android:layout_weight="1" android:weightSum="3">
                 <EditText
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
@@ -43,6 +47,7 @@
                         android:layout_height="match_parent"
                         android:inputType="date"
                         android:id="@+id/inputToDate" android:layout_weight="1" android:layout_gravity="center_vertical" android:textSize="20dp"/>
+                <AutoCompleteTextView android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:id="@+id/categoryAuto"/>
             </LinearLayout>
         </LinearLayout>
         <Button
@@ -66,7 +71,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="Distributor Code"
+                android:text="Invoice No"
                 android:textSize="15dp" android:gravity="center"/>
         <TextView
                 android:layout_width="0dp"
@@ -97,6 +102,33 @@
     </LinearLayout>
     <ListView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1" android:id="@+id/listOfSales"
               tools:listitem="@layout/outlet_wise_sale_item"></ListView>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:weightSum="7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:background="#ffbeeeff">
+        <Space
+                android:layout_width="0dp"
+                android:layout_weight="4"
+                android:layout_height="match_parent"/>
+        <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:id="@+id/txtTotalQuantity"
+                android:textSize="20dp" android:gravity="center" android:text="Quantity"/>
+        <Space
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"/>
+        <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Amount"
+                android:id="@+id/txtTotalAmount"
+                android:textSize="20dp" android:gravity="center"/>
+    </LinearLayout>
     <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/btnReturnToHome" android:text="Back to Home"
             android:textSize="25dp"/>
 </LinearLayout>
