--- a/res/layout/payment_confirmation_report.xml
+++ b/res/layout/payment_confirmation_report.xml
@@ -64,7 +64,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="Distributor Code"
+                android:text="Invoice No"
                 android:textSize="15dp" android:gravity="center"/>
         <TextView
                 android:layout_width="0dp"
